--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
-  <title>Shop - Đồng hồ thời trang nam, nữ</title>
+  <title>Coza Store</title>
 </head>
 
 <body>
